# hsfiddle-benchmark

./: benchmark.cabal
src/: Foreman.hs  Types.hs  Worker.hs
